Re-wrote new proposal flow to have 3 screens. Add items is now on step 2 screen, add supplier on step 3 screen. Suppliers now saving to proposal on submit.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -110,6 +110,10 @@ input[type="number"] {
     max-width: 100px;
 }
 
+.item-body {
+    padding: 5px;
+}
+
 .item-input {
     padding: 0;
 }
@@ -119,7 +123,13 @@ input[type="number"] {
 }
 
 .item-input textarea {
-    padding: 5px;
+    padding: 2px;
+    margin: 2px;
+}
+
+.item-overRide {
+    margin: 2px 0;
+    padding: 2px 0;
 }
 
 .site-header {
