--- a/www/templates/create-proposal.html
+++ b/www/templates/create-proposal.html
@@ -1,6 +1,6 @@
 <ion-view>
     <ion-content overflow-scroll="true">
-        <form name="newProposal" ng-submit="saveProposal(proposal)">
+        <form name="newProposal">
             <div class="row responsive-sm">
                 <div class="col col-100">
                     <h1>Create a New Proposal</h1>
