--- a/www/templates/proposal-add-item.html
+++ b/www/templates/proposal-add-item.html
@@ -43,7 +43,7 @@
                                         <option value="plate">Plate</option>
                                         <option value="roundbar">Round Bar</option>
                                         <option value="tee">Tee</option>
-                                        <option value="tube-rectanglge">Tube Rectangle</option>
+                                        <option value="tube-rectangle">Tube Rectangle</option>
                                         <option value="tube-square">Tube Square</option>
                                         <option vlaue="other">Other</option>
                                     </select>
